# softfloat-c

./: .gitignore  .gitmodules  Cargo.toml  README.md  shell.nix  transpile.sh
examples/: inaccuracy.rs
src/: extF80M_add.rs  extF80M_div.rs  extF80M_eq.rs  extF80M_eq_signaling.rs  extF80M_le.rs  extF80M_le_quiet.rs  extF80M_lt.rs  extF80M_lt_quiet.rs  extF80M_mul.rs  extF80M_rem.rs  extF80M_roundToInt.rs  extF80M_sqrt.rs  extF80M_sub.rs  extF80M_to_f128M.rs  extF80M_to_f16.rs  extF80M_to_f32.rs  extF80M_to_f64.rs  extF80M_to_i32.rs  extF80M_to_i32_r_minMag.rs  extF80M_to_i64.rs  extF80M_to_i64_r_minMag.rs  extF80M_to_ui32.rs  extF80M_to_ui32_r_minMag.rs  extF80M_to_ui64.rs  extF80M_to_ui64_r_minMag.rs  extF80_add.rs  extF80_div.rs  extF80_eq.rs  extF80_eq_signaling.rs  extF80_isSignalingNaN.rs  extF80_le.rs  extF80_le_quiet.rs  extF80_lt.rs  extF80_lt_quiet.rs  extF80_mul.rs  extF80_rem.rs  extF80_roundToInt.rs  extF80_sqrt.rs  extF80_sub.rs  extF80_to_f128.rs  (+239 more)
src/_8086/: extF80M_isSignalingNaN.rs  f128M_isSignalingNaN.rs  mod.rs  s_commonNaNToExtF80UI.rs  s_commonNaNToF128UI.rs  s_commonNaNToF16UI.rs  s_commonNaNToF32UI.rs  s_commonNaNToF64UI.rs  s_extF80UIToCommonNaN.rs  s_f128UIToCommonNaN.rs  s_f16UIToCommonNaN.rs  s_f32UIToCommonNaN.rs  s_f64UIToCommonNaN.rs  s_propagateNaNExtF80UI.rs  s_propagateNaNF128UI.rs  s_propagateNaNF16UI.rs  s_propagateNaNF32UI.rs  s_propagateNaNF64UI.rs  softfloat_raiseFlags.rs
tests/: compare.rs  utils.rs
